fix nav overflow in chrome

--- a/templates/static/styles.css
+++ b/templates/static/styles.css
@@ -56,7 +56,7 @@
 }
 
 html {
-    font-size: 1.1em;
+    font-size: 1.2em;
     background: url('{{ static_url }}/background.jpg'), #282828;
     background-repeat: repeat;
     background-size: cover;
@@ -86,7 +86,7 @@ img {
 
 body {
     font-family: 'Nunito Sans', sans-serif;
-    width: 960px;
+    width: 80ch;
     max-width: 100%;
     margin: 0 auto;
     line-height: 150%;
@@ -102,7 +102,7 @@ nav {
     background: url('{{ static_url }}/noise.png'), linear-gradient(#dcead6, #c5dcbb, #a5c896);
     border-top: 1px solid #f0f6ed;
     border-bottom: 1px solid #7db067;
-    overflow: scroll;
+    overflow: visible;
 }
 
 nav .nav-link {
